<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity" >

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/login_logo_padding_left_right"
        android:paddingRight="@dimen/login_logo_padding_left_right"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_container_padding_left_right"
        android:layout_marginRight="@dimen/login_container_padding_left_right"
        android:layout_marginBottom="@dimen/login_container_padding_left_right"
        android:background="@color/white"
        android:padding="@dimen/login_container_padding_left_right"
        app:layout_constraintTop_toTopOf="@id/login_logo">

        <TextView
            android:id="@+id/text_view_giris_yap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="@dimen/login_title_spacing"
            android:text="@string/giris_text"
            android:textSize="@dimen/login_title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_container_padding_left_right"
            android:hint="@string/giris_input_kadi_hint"
            android:inputType="textPersonName"
            android:textColor="@color/login_input"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/login_input"
            android:textSize="@dimen/login_input_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_giris_yap" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_container_padding_left_right"
            android:hint="@string/giris_input_sifre_hint"
            android:inputType="textPersonName"
            android:textColor="@color/login_input"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/login_input"
            android:textSize="@dimen/login_input_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_container_padding_left_right"
            android:background="@color/main_color_ac"
            android:backgroundTint="@color/main_color_ac"
            android:text="@string/giris_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_container_padding_left_right"
            android:text="@string/giris_sartlar_hatirlatici"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/giris_sartlar_kosllar"
            android:textColor="@color/main_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>